Some updates to styling to correct issues that arrose when testing responsivemense on mobile devices and different browsers.

--- a/style.css
+++ b/style.css
@@ -188,7 +188,18 @@ header h2{
     background-color: #E6E9F5;
     z-index: 2;
 }
+.header-text a {
+    display: flex;
+    flex-direction: column;
+    text-decoration: none;
+    color:#013846;
+    justify-content: center;
+    align-items: center;
+    width: 100px;
+    font-weight: 600;
 
+
+}
 .socials i{
     color: #013846;
     font-size: 3em;
@@ -235,8 +246,13 @@ footer{
     font-weight: bold;
 }
 footer a{
-    text-decoration: none;
-    color: white;
+    display: flex;
+        flex-direction: column;
+        text-decoration: none;
+        color: white;
+        justify-content: center;
+        align-items: center;
+        
 }
 
 footer a:hover{
@@ -277,8 +293,8 @@ footer a:hover{
     padding-top: 10px;
     border: solid #013846 3px;
     border-radius: 100%;
-    height: 150px;
-    width: 150px;
+    height: 170px;
+    width: 170px;
     margin: 0 0 40px 0;
     background-color: #EC7D00;
     cursor: pointer;
@@ -851,11 +867,17 @@ footer a:hover{
     .header-text h2{
         font-size: 8vw;
     }
+
     .header-bg-grp{
-        margin-bottom: -150px;
+        margin-bottom: -130px;
     }
     .passions-section{
         margin-bottom: 10px;
+    }
+
+    .passion-div.expanded{
+        border-radius: 50px;
+        width: 90%;
     }
     .passion-div.expanded p{
         margin-top: 5px;
